--- a/Installer_Src/Setup DreamWorld/My Project/Resources.ar-SA.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.ar-SA.resx
@@ -2547,9 +2547,6 @@
   <data name="Region_full_msg" xml:space="preserve">
     <value>أقصى عدد من الصور الرمزية + الشخصيات غير القابلة للعب</value>
   </data>
-  <data name="c" xml:space="preserve">
-    <value>فشل تحميل إعدادات INI</value>
-  </data>
   <data name="Setup_Graphs_word" xml:space="preserve">
     <value>إعداد الرسوم البيانية</value>
   </data>
@@ -3278,5 +3275,8 @@
   </data>
   <data name="WinterPine21" xml:space="preserve">
     <value>الشتاء باين 2</value>
+  </data>
+  <data name="ParkingRegion1" xml:space="preserve">
+    <value>منطقة وقوف السيارات</value>
   </data>
 </root>
