--- a/Installer_Src/Setup DreamWorld/My Project/Resources.ar.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.ar.resx
@@ -2532,9 +2532,6 @@
   <data name="Theme_Black" xml:space="preserve">
     <value>موضوع تعيين إلى Black</value>
   </data>
-  <data name="Theme_Custom" xml:space="preserve">
-    <value>موضوع تعيين إلى مخصص</value>
-  </data>
   <data name="Theme_White" xml:space="preserve">
     <value>موضوع تعيين إلى الأبيض</value>
   </data>
@@ -2885,9 +2882,6 @@
   </data>
   <data name="Waiting" xml:space="preserve">
     <value>منتظر</value>
-  </data>
-  <data name="Theme_Custom" xml:space="preserve">
-    <value>تم تعيين السمة على Custom</value>
   </data>
   <data name="Khazak" xml:space="preserve">
     <value>خازاكستان</value>
@@ -3278,5 +3272,11 @@
   </data>
   <data name="WinterPine21" xml:space="preserve">
     <value>الشتاء باين 2</value>
+  </data>
+  <data name="Theme_Custom" xml:space="preserve">
+    <value>تم تعيين السمة على Custom</value>
+  </data>
+  <data name="ParkingRegion1" xml:space="preserve">
+    <value>منطقة وقوف السيارات</value>
   </data>
 </root>
