--- a/Installer_Src/Setup DreamWorld/My Project/Resources.ca.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.ca.resx
@@ -1021,9 +1021,6 @@
   <data name="Failed_LAN" xml:space="preserve">
     <value>No s'ha pogut connectar a la web.</value>
   </data>
-  <data name="c" xml:space="preserve">
-    <value>No s'ha pogut carregar la configuració INI</value>
-  </data>
   <data name="Fatal_word" xml:space="preserve">
     <value>fatal</value>
   </data>
@@ -3279,5 +3276,8 @@
   </data>
   <data name="WinterPine21" xml:space="preserve">
     <value>Winter Pine 2</value>
+  </data>
+  <data name="ParkingRegion1" xml:space="preserve">
+    <value>Zona d'aparcament</value>
   </data>
 </root>
