--- a/Installer_Src/Setup DreamWorld/My Project/Resources.cs.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.cs.resx
@@ -2547,9 +2547,6 @@
   <data name="Region_full_msg" xml:space="preserve">
     <value>Maximální počet Avatarů + NPC</value>
   </data>
-  <data name="c" xml:space="preserve">
-    <value>Načtení nastavení INI se nezdařilo</value>
-  </data>
   <data name="Setup_Graphs_word" xml:space="preserve">
     <value>Nastavení grafů</value>
   </data>
@@ -3278,5 +3275,8 @@
   </data>
   <data name="WinterPine21" xml:space="preserve">
     <value>Winter Pine 2</value>
+  </data>
+  <data name="ParkingRegion1" xml:space="preserve">
+    <value>Parkovací region</value>
   </data>
 </root>
