--- a/Installer_Src/Setup DreamWorld/My Project/Resources.el.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.el.resx
@@ -1020,9 +1020,6 @@
   <data name="Failed_LAN" xml:space="preserve">
     <value>Αποτυχία σύνδεσης στο web site.</value>
   </data>
-  <data name="c" xml:space="preserve">
-    <value>Αποτυχία φόρτωσης ρυθμίσεων INI</value>
-  </data>
   <data name="Fatal_word" xml:space="preserve">
     <value>Μοιραίος</value>
   </data>
@@ -3278,5 +3275,8 @@
   </data>
   <data name="WinterPine21" xml:space="preserve">
     <value>Χειμερινό πεύκο 2</value>
+  </data>
+  <data name="ParkingRegion1" xml:space="preserve">
+    <value>Περιοχή στάθμευσης</value>
   </data>
 </root>
