--- a/Installer_Src/Setup DreamWorld/My Project/Resources.ar.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.ar.resx
@@ -3279,4 +3279,10 @@
   <data name="ParkingRegion1" xml:space="preserve">
     <value>منطقة وقوف السيارات</value>
   </data>
+  <data name="RunasaService_word" xml:space="preserve">
+    <value>تشغيل كخدمة</value>
+  </data>
+  <data name="MySQLDidNotStop" xml:space="preserve">
+    <value>لم تتوقف MySQL عندما أمرت بالتوقف</value>
+  </data>
 </root>
