--- a/Installer_Src/Setup DreamWorld/My Project/Resources.ca.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.ca.resx
@@ -3280,4 +3280,10 @@
   <data name="ParkingRegion1" xml:space="preserve">
     <value>Zona d'aparcament</value>
   </data>
+  <data name="RunasaService_word" xml:space="preserve">
+    <value>Funciona com a servei</value>
+  </data>
+  <data name="MySQLDidNotStop" xml:space="preserve">
+    <value>MySQL no es va aturar quan se li va demanar que s'aturés</value>
+  </data>
 </root>
