--- a/Installer_Src/Setup DreamWorld/My Project/Resources.cs.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.cs.resx
@@ -3279,4 +3279,10 @@
   <data name="ParkingRegion1" xml:space="preserve">
     <value>Parkovací region</value>
   </data>
+  <data name="RunasaService_word" xml:space="preserve">
+    <value>Spustit jako službu</value>
+  </data>
+  <data name="MySQLDidNotStop" xml:space="preserve">
+    <value>MySQL se nezastavil, když dostal příkaz zastavit</value>
+  </data>
 </root>
