--- a/Installer_Src/Setup DreamWorld/My Project/Resources.el.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.el.resx
@@ -3279,4 +3279,10 @@
   <data name="ParkingRegion1" xml:space="preserve">
     <value>Περιοχή στάθμευσης</value>
   </data>
+  <data name="RunasaService_word" xml:space="preserve">
+    <value>Εκτελέστε ως υπηρεσία</value>
+  </data>
+  <data name="MySQLDidNotStop" xml:space="preserve">
+    <value>Η MySQL δεν σταμάτησε όταν του ζητήθηκε να σταματήσει</value>
+  </data>
 </root>
