Rework Group and region Ports to help prevent conflicts

--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -3806,4 +3806,7 @@
   <data name="MySQLDidNotStop" xml:space="preserve">
     <value>MySQL did not stop when commanded to stop</value>
   </data>
+  <data name="No_Estate_Word" xml:space="preserve">
+    <value>No Estate</value>
+  </data>
 </root>
