--- a/Installer_Src/Setup DreamWorld/My Project/Resources.ar.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.ar.resx
@@ -3285,4 +3285,7 @@
   <data name="MySQLDidNotStop" xml:space="preserve">
     <value>لم تتوقف MySQL عندما أمرت بالتوقف</value>
   </data>
+  <data name="No_Estate_Word" xml:space="preserve">
+    <value>لا عقارات</value>
+  </data>
 </root>
