--- a/Installer_Src/Setup DreamWorld/My Project/Resources.ca.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.ca.resx
@@ -3286,4 +3286,7 @@
   <data name="MySQLDidNotStop" xml:space="preserve">
     <value>MySQL no es va aturar quan se li va demanar que s'aturés</value>
   </data>
+  <data name="No_Estate_Word" xml:space="preserve">
+    <value>Sense finca</value>
+  </data>
 </root>
