--- a/Installer_Src/Setup DreamWorld/My Project/Resources.el.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.el.resx
@@ -3285,4 +3285,7 @@
   <data name="MySQLDidNotStop" xml:space="preserve">
     <value>Η MySQL δεν σταμάτησε όταν του ζητήθηκε να σταματήσει</value>
   </data>
+  <data name="No_Estate_Word" xml:space="preserve">
+    <value>Χωρίς κτήμα</value>
+  </data>
 </root>
