--- a/Installer_Src/Setup DreamWorld/My Project/Resources.ca.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.ca.resx
@@ -3289,4 +3289,7 @@
   <data name="No_Estate_Word" xml:space="preserve">
     <value>Sense finca</value>
   </data>
+  <data name="isBooting" xml:space="preserve">
+    <value>encara arrenca</value>
+  </data>
 </root>
