--- a/Installer_Src/Setup DreamWorld/My Project/Resources.cs.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.cs.resx
@@ -3288,4 +3288,7 @@
   <data name="No_Estate_Word" xml:space="preserve">
     <value>Žádný majetek</value>
   </data>
+  <data name="isBooting" xml:space="preserve">
+    <value>stále bootuje</value>
+  </data>
 </root>
