--- a/Installer_Src/Setup DreamWorld/My Project/Resources.da.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.da.resx
@@ -3288,4 +3288,7 @@
   <data name="No_Estate_Word" xml:space="preserve">
     <value>Ingen ejendom</value>
   </data>
+  <data name="isBooting" xml:space="preserve">
+    <value>starter stadig</value>
+  </data>
 </root>
