--- a/Installer_Src/Setup DreamWorld/My Project/Resources.de.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.de.resx
@@ -3288,4 +3288,7 @@
   <data name="No_Estate_Word" xml:space="preserve">
     <value>Kein Anwesen</value>
   </data>
+  <data name="isBooting" xml:space="preserve">
+    <value>bootet noch</value>
+  </data>
 </root>
