--- a/Installer_Src/Setup DreamWorld/My Project/Resources.en.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.en.resx
@@ -3273,4 +3273,19 @@
   <data name="WinterPine21" xml:space="preserve">
     <value>Winter Pine 2</value>
   </data>
+  <data name="ParkingRegion1" xml:space="preserve">
+    <value>Parking Region!</value>
+  </data>
+  <data name="RunasaService_word" xml:space="preserve">
+    <value>Run as a Service!</value>
+  </data>
+  <data name="MySQLDidNotStop" xml:space="preserve">
+    <value>MySQL did not stop when commanded to stop!</value>
+  </data>
+  <data name="No_Estate_Word" xml:space="preserve">
+    <value>No Estate!</value>
+  </data>
+  <data name="isBooting" xml:space="preserve">
+    <value>is still booting!</value>
+  </data>
 </root>
