--- a/Installer_Src/Setup DreamWorld/My Project/Resources.es-ES.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.es-ES.resx
@@ -3273,4 +3273,19 @@
   <data name="_0" xml:space="preserve">
     <value>0</value>
   </data>
+  <data name="ParkingRegion1" xml:space="preserve">
+    <value>Región de estacionamiento!</value>
+  </data>
+  <data name="RunasaService_word" xml:space="preserve">
+    <value>as a Service</value>
+  </data>
+  <data name="MySQLDidNotStop" xml:space="preserve">
+    <value>MySQL no se detuvo cuando se le ordenó detenerse!</value>
+  </data>
+  <data name="No_Estate_Word" xml:space="preserve">
+    <value>No Estate!</value>
+  </data>
+  <data name="isBooting" xml:space="preserve">
+    <value>todavía está arrancando!</value>
+  </data>
 </root>
