--- a/Installer_Src/Setup DreamWorld/My Project/Resources.fi.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.fi.resx
@@ -3273,4 +3273,19 @@
   <data name="WinterPine21" xml:space="preserve">
     <value>Talvimänty 2</value>
   </data>
+  <data name="RunasaService_word" xml:space="preserve">
+    <value>Sovellukset, jotka määritetään palveluiksi ja toimimaan työpöydän kanssa, on suoritettava  paikallisessa järjestelmässä.</value>
+  </data>
+  <data name="ParkingRegion1" xml:space="preserve">
+    <value>Pysäköintialue</value>
+  </data>
+  <data name="MySQLDidNotStop" xml:space="preserve">
+    <value>MySQL ei pysähtynyt, kun käskettiin lopettaa</value>
+  </data>
+  <data name="No_Estate_Word" xml:space="preserve">
+    <value>Ei Estate</value>
+  </data>
+  <data name="isBooting" xml:space="preserve">
+    <value>käynnistyy edelleen</value>
+  </data>
 </root>
