--- a/Installer_Src/Setup DreamWorld/My Project/Resources.fr.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.fr.resx
@@ -3273,4 +3273,19 @@
   <data name="WinterPine21" xml:space="preserve">
     <value>Pin d'hiver 2</value>
   </data>
+  <data name="RunasaService_word" xml:space="preserve">
+    <value>Si vous n'avez pas effectué l'exécution en tant que service ci-dessus :</value>
+  </data>
+  <data name="ParkingRegion1" xml:space="preserve">
+    <value>Région de stationnement</value>
+  </data>
+  <data name="MySQLDidNotStop" xml:space="preserve">
+    <value>MySQL ne s'est pas arrêté lorsqu'on lui a demandé de s'arrêter</value>
+  </data>
+  <data name="No_Estate_Word" xml:space="preserve">
+    <value>Pas de succession</value>
+  </data>
+  <data name="isBooting" xml:space="preserve">
+    <value>est encore en train de démarrer</value>
+  </data>
 </root>
