--- a/Installer_Src/Setup DreamWorld/My Project/Resources.ga.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.ga.resx
@@ -3273,4 +3273,19 @@
   <data name="WinterPine21" xml:space="preserve">
     <value>Pine Geimhridh 2</value>
   </data>
+  <data name="ParkingRegion1" xml:space="preserve">
+    <value>Réigiún Páirceála</value>
+  </data>
+  <data name="RunasaService_word" xml:space="preserve">
+    <value>Rith mar Sheirbhís</value>
+  </data>
+  <data name="MySQLDidNotStop" xml:space="preserve">
+    <value>Níor stad MySQL nuair a ordaíodh dó stopadh</value>
+  </data>
+  <data name="No_Estate_Word" xml:space="preserve">
+    <value>Gan Eastát</value>
+  </data>
+  <data name="isBooting" xml:space="preserve">
+    <value>fós ag tosaithe</value>
+  </data>
 </root>
