--- a/Installer_Src/Setup DreamWorld/My Project/Resources.it.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.it.resx
@@ -3273,4 +3273,19 @@
   <data name="WinterPine21" xml:space="preserve">
     <value>Pino invernale 2</value>
   </data>
+  <data name="RunasaService_word" xml:space="preserve">
+    <value>Se in precedenza non è stata scelta l'esecuzione come servizio:</value>
+  </data>
+  <data name="ParkingRegion1" xml:space="preserve">
+    <value>Area di parcheggio</value>
+  </data>
+  <data name="MySQLDidNotStop" xml:space="preserve">
+    <value>MySQL non si è fermato quando gli è stato ordinato di fermarsi</value>
+  </data>
+  <data name="No_Estate_Word" xml:space="preserve">
+    <value>Nessuna proprietà</value>
+  </data>
+  <data name="isBooting" xml:space="preserve">
+    <value>si sta ancora avviando</value>
+  </data>
 </root>
