--- a/Installer_Src/Setup DreamWorld/My Project/Resources.nl-NL.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.nl-NL.resx
@@ -3273,4 +3273,19 @@
   <data name="WinterPine21" xml:space="preserve">
     <value>Winterpijnboom 2</value>
   </data>
+  <data name="RunasaService_word" xml:space="preserve">
+    <value>register - als uit te voeren service registreren en standaardconfiguratie</value>
+  </data>
+  <data name="ParkingRegion1" xml:space="preserve">
+    <value>Parkeerregio</value>
+  </data>
+  <data name="MySQLDidNotStop" xml:space="preserve">
+    <value>MySQL stopte niet toen het werd opgedragen om te stoppen</value>
+  </data>
+  <data name="No_Estate_Word" xml:space="preserve">
+    <value>Geen landgoed</value>
+  </data>
+  <data name="isBooting" xml:space="preserve">
+    <value>is nog steeds aan het opstarten</value>
+  </data>
 </root>
