--- a/Installer_Src/Setup DreamWorld/My Project/Resources.pl.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.pl.resx
@@ -3273,4 +3273,19 @@
   <data name="WinterPine21" xml:space="preserve">
     <value>Sosna Zimowa 2</value>
   </data>
+  <data name="RunasaService_word" xml:space="preserve">
+    <value>Jeśli nie użyto opcji uruchomienia jako usługi powyżej:</value>
+  </data>
+  <data name="ParkingRegion1" xml:space="preserve">
+    <value>Region parkingowy</value>
+  </data>
+  <data name="MySQLDidNotStop" xml:space="preserve">
+    <value>MySQL nie zatrzymał się, gdy nakazano mu się zatrzymać</value>
+  </data>
+  <data name="No_Estate_Word" xml:space="preserve">
+    <value>Brak majątku</value>
+  </data>
+  <data name="isBooting" xml:space="preserve">
+    <value>nadal się uruchamia</value>
+  </data>
 </root>
