--- a/Installer_Src/Setup DreamWorld/My Project/Resources.pt-BR.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.pt-BR.resx
@@ -3276,4 +3276,19 @@
   <data name="WinterPine21" xml:space="preserve">
     <value>Winter Pine 2</value>
   </data>
+  <data name="RunasaService_word" xml:space="preserve">
+    <value>Caso não tenha executado como um serviço acima:</value>
+  </data>
+  <data name="ParkingRegion1" xml:space="preserve">
+    <value>Região de estacionamento</value>
+  </data>
+  <data name="MySQLDidNotStop" xml:space="preserve">
+    <value>O MySQL não parou quando ordenado para parar</value>
+  </data>
+  <data name="No_Estate_Word" xml:space="preserve">
+    <value>Sem propriedade</value>
+  </data>
+  <data name="isBooting" xml:space="preserve">
+    <value>ainda está inicializando</value>
+  </data>
 </root>
