--- a/Installer_Src/Setup DreamWorld/My Project/Resources.vi.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.vi.resx
@@ -3273,4 +3273,19 @@
   <data name="WinterPine21" xml:space="preserve">
     <value>Thông mùa đông 2</value>
   </data>
+  <data name="ParkingRegion1" xml:space="preserve">
+    <value>Khu vực đậu xe</value>
+  </data>
+  <data name="RunasaService_word" xml:space="preserve">
+    <value>Chạy như một dịch vụ</value>
+  </data>
+  <data name="MySQLDidNotStop" xml:space="preserve">
+    <value>MySQL không dừng khi có lệnh dừng</value>
+  </data>
+  <data name="No_Estate_Word" xml:space="preserve">
+    <value>Không có động sản</value>
+  </data>
+  <data name="isBooting" xml:space="preserve">
+    <value>vẫn đang khởi động</value>
+  </data>
 </root>
