--- a/Installer_Src/Setup DreamWorld/My Project/Resources.fr.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.fr.resx
@@ -3288,4 +3288,7 @@
   <data name="isBooting" xml:space="preserve">
     <value>est encore en train de démarrer</value>
   </data>
+  <data name="TotalArea_word" xml:space="preserve">
+    <value>&amp;Aire totale :</value>
+  </data>
 </root>
