--- a/Installer_Src/Setup DreamWorld/My Project/Resources.pt-BR.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.pt-BR.resx
@@ -3291,4 +3291,7 @@
   <data name="isBooting" xml:space="preserve">
     <value>ainda está inicializando</value>
   </data>
+  <data name="TotalArea_word" xml:space="preserve">
+    <value>Áre&amp;a total:</value>
+  </data>
 </root>
