--- a/Installer_Src/Setup DreamWorld/My Project/Resources.ar-SA.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.ar-SA.resx
@@ -3291,4 +3291,7 @@
   <data name="isBooting" xml:space="preserve">
     <value>لا يزال قيد التشغيل</value>
   </data>
+  <data name="TotalArea_word" xml:space="preserve">
+    <value>المساحة الكلية</value>
+  </data>
 </root>
