--- a/Installer_Src/Setup DreamWorld/My Project/Resources.da.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.da.resx
@@ -3291,4 +3291,7 @@
   <data name="isBooting" xml:space="preserve">
     <value>starter stadig</value>
   </data>
+  <data name="TotalArea_word" xml:space="preserve">
+    <value>Samlet areal</value>
+  </data>
 </root>
