--- a/Installer_Src/Setup DreamWorld/My Project/Resources.de.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.de.resx
@@ -3291,4 +3291,7 @@
   <data name="isBooting" xml:space="preserve">
     <value>bootet noch</value>
   </data>
+  <data name="TotalArea_word" xml:space="preserve">
+    <value>Gesamtfläche</value>
+  </data>
 </root>
