--- a/Installer_Src/Setup DreamWorld/My Project/Resources.es-ES.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.es-ES.resx
@@ -3288,4 +3288,7 @@
   <data name="isBooting" xml:space="preserve">
     <value>todavía está arrancando!</value>
   </data>
+  <data name="TotalArea_word" xml:space="preserve">
+    <value>Áre&amp;a total:</value>
+  </data>
 </root>
