--- a/Installer_Src/Setup DreamWorld/My Project/Resources.es-MX.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.es-MX.resx
@@ -3288,4 +3288,7 @@
   <data name="isBooting" xml:space="preserve">
     <value>todavía está arrancando!</value>
   </data>
+  <data name="TotalArea_word" xml:space="preserve">
+    <value>Área total de la tienda, incluida el área de venta y de almacenamiento.</value>
+  </data>
 </root>
