--- a/Installer_Src/Setup DreamWorld/My Project/Resources.he.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.he.resx
@@ -3288,4 +3288,7 @@
   <data name="isBooting" xml:space="preserve">
     <value>עדיין מתחיל</value>
   </data>
+  <data name="TotalArea_word" xml:space="preserve">
+    <value>שטח &amp;כולל:</value>
+  </data>
 </root>
