--- a/Installer_Src/Setup DreamWorld/My Project/Resources.it.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.it.resx
@@ -3288,4 +3288,7 @@
   <data name="isBooting" xml:space="preserve">
     <value>si sta ancora avviando</value>
   </data>
+  <data name="TotalArea_word" xml:space="preserve">
+    <value>&amp;Area totale:</value>
+  </data>
 </root>
