--- a/Installer_Src/Setup DreamWorld/My Project/Resources.no.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.no.resx
@@ -3288,4 +3288,7 @@
   <data name="isBooting" xml:space="preserve">
     <value>starter fortsatt</value>
   </data>
+  <data name="TotalArea_word" xml:space="preserve">
+    <value>Totalt &amp;område:</value>
+  </data>
 </root>
