--- a/Installer_Src/Setup DreamWorld/My Project/Resources.pl.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.pl.resx
@@ -3288,4 +3288,7 @@
   <data name="isBooting" xml:space="preserve">
     <value>nadal się uruchamia</value>
   </data>
+  <data name="TotalArea_word" xml:space="preserve">
+    <value>Całkowita p&amp;owierzchnia:</value>
+  </data>
 </root>
