--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -3809,4 +3809,7 @@
   <data name="cubes_blue" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\cubes_blue.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="TotalArea_word" xml:space="preserve">
+    <value>Total Area</value>
+  </data>
 </root>
