--- a/Installer_Src/Setup DreamWorld/My Project/Resources.ru.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.ru.resx
@@ -3288,4 +3288,7 @@
   <data name="isBooting" xml:space="preserve">
     <value>все еще загружается</value>
   </data>
+  <data name="TotalArea_word" xml:space="preserve">
+    <value>&amp;Общая площадь:</value>
+  </data>
 </root>
