--- a/Installer_Src/Setup DreamWorld/My Project/Resources.tr.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.tr.resx
@@ -3288,4 +3288,7 @@
   <data name="isBooting" xml:space="preserve">
     <value>hala açılıyor</value>
   </data>
+  <data name="TotalArea_word" xml:space="preserve">
+    <value>Toplam &amp;alan:</value>
+  </data>
 </root>
