--- a/Installer_Src/Setup DreamWorld/My Project/Resources.zh-cn.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.zh-cn.resx
@@ -3288,4 +3288,7 @@
   <data name="isBooting" xml:space="preserve">
     <value>仍在启动</value>
   </data>
+  <data name="TotalArea_word" xml:space="preserve">
+    <value>总面积(&amp;A):</value>
+  </data>
 </root>
