--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -3614,9 +3614,6 @@
   <data name="Cypress_2" xml:space="preserve">
     <value>Cypress 2</value>
   </data>
-  <data name="DelayBeforeExit" xml:space="preserve">
-    <value>Seconds Before Waiting</value>
-  </data>
   <data name="Delete_All" xml:space="preserve">
     <value>Delete All</value>
   </data>
@@ -3814,5 +3811,11 @@
   </data>
   <data name="TotalArea_word" xml:space="preserve">
     <value>Total Area</value>
+  </data>
+  <data name="DelayAfterRegionReady" xml:space="preserve">
+    <value>Region Ready Delay</value>
+  </data>
+  <data name="minkeepalive" xml:space="preserve">
+    <value>Minimum time is 0 seconds. Default is 60 seconds.</value>
   </data>
 </root>
