--- a/Installer_Src/Setup DreamWorld/My Project/Resources.fi.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.fi.resx
@@ -3291,4 +3291,16 @@
   <data name="TotalArea_word" xml:space="preserve">
     <value>Kokonais&amp;ala:</value>
   </data>
+  <data name="Row_note" xml:space="preserve">
+    <value>Napsauta riviä hallitaksesi aluetta. Ota ruutu käyttöön tai poista se käytöstä.</value>
+  </data>
+  <data name="Search_word" xml:space="preserve">
+    <value>Hae</value>
+  </data>
+  <data name="DelayAfterRegionReady" xml:space="preserve">
+    <value>Alueen valmiusviive</value>
+  </data>
+  <data name="minkeepalive" xml:space="preserve">
+    <value>Pienin aika on 0 sekuntia. Oletus on 60 sekuntia.</value>
+  </data>
 </root>
