--- a/Installer_Src/Setup DreamWorld/My Project/Resources.he.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.he.resx
@@ -3291,4 +3291,16 @@
   <data name="TotalArea_word" xml:space="preserve">
     <value>שטח &amp;כולל:</value>
   </data>
+  <data name="Row_note" xml:space="preserve">
+    <value>לחץ על שורה כדי לשלוט על האזור. סמן את התיבה כדי להפעיל / להשבית.</value>
+  </data>
+  <data name="Search_word" xml:space="preserve">
+    <value>לחפש</value>
+  </data>
+  <data name="DelayAfterRegionReady" xml:space="preserve">
+    <value>עיכוב מוכן לאזור</value>
+  </data>
+  <data name="minkeepalive" xml:space="preserve">
+    <value>זמן מינימלי הוא 0 שניות. ברירת המחדל היא 60 שניות.</value>
+  </data>
 </root>
