--- a/Installer_Src/Setup DreamWorld/My Project/Resources.ru.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.ru.resx
@@ -3291,4 +3291,16 @@
   <data name="TotalArea_word" xml:space="preserve">
     <value>&amp;Общая площадь:</value>
   </data>
+  <data name="Row_note" xml:space="preserve">
+    <value>Щелкните строку для управления регионом. Установите флажок, чтобы включить / отключить.</value>
+  </data>
+  <data name="Search_word" xml:space="preserve">
+    <value>Поиск</value>
+  </data>
+  <data name="DelayAfterRegionReady" xml:space="preserve">
+    <value>Задержка готовности региона</value>
+  </data>
+  <data name="minkeepalive" xml:space="preserve">
+    <value>Минимальное время - 0 секунд. По умолчанию 60 секунд.</value>
+  </data>
 </root>
