--- a/Installer_Src/Setup DreamWorld/My Project/Resources.sv.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.sv.resx
@@ -3291,4 +3291,16 @@
   <data name="TotalArea_word" xml:space="preserve">
     <value>&amp;Totalt område:</value>
   </data>
+  <data name="Row_note" xml:space="preserve">
+    <value>Klicka på en rad för att kontrollera regionen. Markera rutan för att aktivera / inaktivera.</value>
+  </data>
+  <data name="Search_word" xml:space="preserve">
+    <value>Sök</value>
+  </data>
+  <data name="DelayAfterRegionReady" xml:space="preserve">
+    <value>Region Ready Delay</value>
+  </data>
+  <data name="minkeepalive" xml:space="preserve">
+    <value>Minsta tid är 0 sekunder. Standard är 60 sekunder.</value>
+  </data>
 </root>
